manifests/dev/cloudbeaver/Deployment-cloudbeaver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: cloudbeaver
    app.kubernetes.io/instance: cloudbeaver
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cloudbeaver
    app.kubernetes.io/version: 26.1.2
    helm.sh/chart: cloudbeaver-1.1.7
  name: cloudbeaver
  namespace: cloudbeaver
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: cloudbeaver
      app.kubernetes.io/name: cloudbeaver
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: cloudbeaver
        app.kubernetes.io/instance: cloudbeaver
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: cloudbeaver
        app.kubernetes.io/version: 26.1.2
        helm.sh/chart: cloudbeaver-1.1.7
    spec:
      automountServiceAccountToken: false
      containers:
        - image: docker.io/dbeaver/cloudbeaver:26.1.2
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /#/api/gql
              port: 8978
            initialDelaySeconds: 60
            periodSeconds: 5
            timeoutSeconds: 1
          name: cloudbeaver
          ports:
            - containerPort: 8978
              name: http
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /#/api/gql
              port: 8978
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            runAsGroup: 8978
            runAsNonRoot: true
            runAsUser: 8978
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /opt/cloudbeaver/workspace
              name: data
      nodeSelector:
        kubernetes.io/hostname: edgenix
      securityContext:
        fsGroup: 8978
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: cloudbeaver
