manifests/dev/cloudbeaver/Pod-cloudbeaver-test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    helm.sh/hook: test
  labels:
    app.kubernetes.io/instance: cloudbeaver
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cloudbeaver
    app.kubernetes.io/version: 26.1.2
    helm.sh/chart: cloudbeaver-1.1.7
  name: cloudbeaver-test-connection
  namespace: cloudbeaver
spec:
  containers:
    - args:
        - cloudbeaver:8978
      command:
        - wget
      image: busybox
      name: wget
  restartPolicy: Never
