manifests/dev/cloudbeaver/Service-cloudbeaver-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app-name: cloudbeaver
    component: db-server
    created-by: chynten
    helm.sh/chart: cloudbeaver-0.6
    hostNetwork: "false"
    internal-service: "true"
    managed-by: chynten
    version: 22.0.4
  name: cloudbeaver-svc
  namespace: authentik
spec:
  ports:
    - name: http
      port: 8978
      protocol: TCP
      targetPort: 8978
  selector:
    app-name: cloudbeaver
  type: ClusterIP
