manifests/dev/cloudbeaver/Service-cloudbeaver.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: cloudbeaver
    app.kubernetes.io/instance: cloudbeaver
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cloudbeaver
    app.kubernetes.io/version: 26.1.2
    helm.sh/chart: cloudbeaver-1.1.7
  name: cloudbeaver
  namespace: cloudbeaver
spec:
  ports:
    - name: http
      port: 8978
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: cloudbeaver
    app.kubernetes.io/name: cloudbeaver
  sessionAffinity: None
  type: ClusterIP
