manifests/dev/cloudbeaver/Ingress-cloudbeaver-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: cloudbeaver-local
  namespace: cloudbeaver
spec:
  ingressClassName: traefik
  rules:
    - host: cloudbeaver.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: cloudbeaver
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - cloudbeaver.home.kronkltd.net
      secretName: cloudbeaver-local-tls
