manifests/dev/cloudbeaver/Ingress-cloudbeaver.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app.kubernetes.io/component: cloudbeaver
    app.kubernetes.io/instance: cloudbeaver
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cloudbeaver
    app.kubernetes.io/version: 26.1.2
    helm.sh/chart: cloudbeaver-1.1.7
  name: cloudbeaver
  namespace: cloudbeaver
spec:
  ingressClassName: traefik
  rules:
    - host: cloudbeaver.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: cloudbeaver
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - cloudbeaver.home.kronkltd.net
      secretName: cloudbeaver.home.kronkltd.net-tls
